Brilliant.. test gets run after build, so if we want to fail on lint, we're too late.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,12 @@
+stages:
+  - lint
+  - build
+  - test
+  - deploy
+
 run linter:
   image: node:8
-  stage: test
+  stage: lint
   variables:
     NODE_ENV: "production"
   script:
