--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,12 @@ stages:
   - deploy
 
 run linter:
-  image: node:8
+  image: node:11
   stage: lint
   variables:
     NODE_ENV: "production"
   script:
-    - npm install --progress=false
+    - npm install
     - npm run lint
 
 build site:
