--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,11 @@
+job:
+  image: node:11
+  only:
+    refs:
+      - dev
+      - master
+      - merge_requests
+      
 stages:
   - lint
   - build
@@ -5,14 +13,12 @@ stages:
   - deploy
 
 run linter:
-  image: node:11
   stage: lint
   script:
     - npm install --progress=false
     - npm run lint
 
 build site:
-  image: node:8
   stage: build
   script:
     - npm install --progress=false
