Merge_requests don't trigger from pull requests..
Attempt to see if a regexp solution works. -- We should not name our branches <pull> something.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ run linter:
     refs:
       - dev
       - master
-      - merge_requests
+      - /*pull*/
   script:
     - npm install --progress=false
     - npm run lint
