--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,18 @@ stages:
 
 run linter:
   stage: lint
+  only:
+    refs:
+      - master
   script:
     - npm install --progress=false
     - npm run lint
 
 build site:
   stage: build
+  only:
+    refs:
+      - master
   script:
     - npm install --progress=false
     - npm run build
@@ -34,4 +40,6 @@ deploy site:
     - mkdir -p ~/.ssh
     - echo "$NETMOBIEL_SSH_PRIVATE_KEY" >> ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
-    - cat .ssh/id_rsa
+    - cat ~/.ssh/id_rsa
+    - echo "HELLO WORLD" >> ~/test_file
+    - scp -o StrictHostKeyChecking=no test_file gitlab@dev.netmobiel.eu:~
