--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,5 @@ deploy site:
     - echo "$NETMOBIEL_SSH_PRIVATE_KEY" >> ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ls
-    - scp -r -o StrictHostKeyChecking=no dist gitlab@dev.netmobiel.eu:~/html
+    - rsync -a --delete -e "ssh -o StrictHostKeyChecking=no" dist gitlab@dev.netmobiel.eu:~/html
+
