--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,12 @@ stages:
 
 cache:
   paths:
-   - node_modules/
-
-before_script:
- - npm install
+  - node_modules/
 
 run linter:
   stage: lint
+  before_script:
+   - npm install
   script:
     - npm run lint
 
@@ -29,6 +28,7 @@ build site:
 
 deploy site:
   stage: deploy
+  cache: {}
   script:
     - apk add --no-cache openssh rsync
     - mkdir -p ~/.ssh
