--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,12 @@ cache:
   paths:
   - node_modules/
 
-# run linter:
-#   stage: lint
-#   before_script:
-#    - npm install
-#   script:
-#     - npm run lint
+run linter:
+  stage: lint
+  before_script:
+   - npm install
+  script:
+    - npm run lint
 
 build site:
   stage: build
