--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,9 @@ build site:
 
 deploy site:
   stage: deploy
-  # only:
-  #   - master
-  #   - dev
+  only:
+    - master
+    - dev
   cache: {}
   script:
     - apk add --no-cache openssh rsync
