--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.21",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.2",
+    "vue-slider-component": "^3.0.32",
     "vuetify": "^1.5.11",
     "vuex": "^3.0.1"
   },
