--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint-prod": "vue-cli-service lint --mode production"
   },
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.0.7",
