--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
     "@dsb-norge/vue-keycloak-js": "^1.0.7",
     "axios": "^0.18.1",
     "moment": "^2.24.0",
-    "npm": "^6.11.3",
-    "vue": "^2.5.21",
+    "npm": "^6.12.1",
+    "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
     "vue-jwt-decode": "^0.1.0",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.5.11",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli": "^3.7.0",
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.7.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.15.1",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16",
     "eslint-config-prettier": "^4.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "vue-cli-plugin-vuetify": "^2.0.1",
+    "vuetify-loader": "^1.3.0"
   }
 }
