--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,15 +24,13 @@ run development linter:
 
 run production linter:
   stage: lint
-  variables:
-    NODE_ENV: "production"
   only:
     - master
     - dev
   before_script:
    - npm install
   script:
-    - npm run lint
+    - npm run lint-prod
 
 build site acceptance:
   stage: build
