--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.16.4",
+    "raw-loader": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10",
     "vue-cli-plugin-vuetify": "^2.0.1",
+    "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
 }
