Added CI instruction to store the last commit in the current.hash asset.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,8 @@ build site acceptance:
   only:
     - dev
   script:
+    - hash=`git describe --always`
+    - echo "\"$hash\"" > src/assets/current.hash
     - npm run build
   artifacts:
     expire_in: 1 week
