Apparently we have not git installed in the alpine docker image.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ build site acceptance:
   only:
     - dev
   script:
+    - apk update && apk add git
     - hash=`git describe --always`
     - echo "\"$hash\"" > src/assets/current.hash
     - npm run build
