--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ build site acceptance:
   script:
     - apk update && apk add git
     - hash=`git describe --always`
-    - echo "\"$hash\"" > src/assets/current.hash
+    - echo $hash > src/assets/current.hash
     - npm run build
   artifacts:
     expire_in: 1 week
@@ -72,6 +72,9 @@ build site production:
   only:
     - master
   script:
+    - apk update && apk add git
+    - hash=`git describe --always`
+    - echo $hash > src/assets/current.hash
     - npm run build
   artifacts:
     expire_in: 1 week
