--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.0.7",
     "axios": "^0.18.1",
+    "mapbox-gl": "^1.8.0",
     "moment": "^2.24.0",
     "npm": "^6.13.6",
     "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
     "vue-jwt-decode": "^0.1.0",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
