--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.0.7",
+    "@mapbox/polyline": "^1.1.0",
     "axios": "^0.18.1",
     "mapbox-gl": "^1.8.0",
     "moment": "^2.24.0",
