CI is complaining that it cannot find env variable. Works locally (because it is located in .env.local) but not in CI (because it is a normal env - i'm assuming).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,7 @@ build site acceptance:
     - apk update && apk add git
     - hash=`git describe --always`
     - echo $hash > src/assets/current.hash
+    - echo "VUE_APP_YBUG_ID=$VUE_APP_YBUG_ID" >> .env
     - npm run build
   artifacts:
     expire_in: 1 week
@@ -76,6 +77,7 @@ build site production:
     - apk update && apk add git
     - hash=`git describe --always`
     - echo $hash > src/assets/current.hash
+    - echo "VUE_APP_YBUG_ID=$VUE_APP_YBUG_ID" >> .env
     - npm run build
   artifacts:
     expire_in: 1 week
