--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-plugin-typescript": "^4.4.6",
     "@vue/cli-service": "^4.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16",
     "eslint-config-prettier": "^4.1.0",
@@ -39,6 +41,7 @@
     "raw-loader": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "^2.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
