--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-mapbox": "^0.4.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-typex": "^3.1.5"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
