--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dsb-norge/vue-keycloak-js": "^1.1.3",
     "@mapbox/polyline": "^1.1.1",
     "axios": "^0.18.1",
+    "geolib": "^3.3.1",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
