--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
+    "uuid": "^3.4.0",
     "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
     "vue-jwt-decode": "^0.1.0",
