--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.1.3",
     "@mapbox/polyline": "^1.1.1",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.18.1",
     "geolib": "^3.3.1",
     "mapbox-gl": "^1.12.0",
