--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.3.2",
+    "@js-joda/core": "^3.2.0",
+    "@js-joda/locale_en": "^3.2.2",
+    "@js-joda/timezone": "^2.5.0",
     "@mapbox/polyline": "^1.1.1",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
