--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
   },
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.3.2",
-    "@js-joda/core": "^3.2.0",
-    "@js-joda/locale_en": "^3.2.2",
-    "@js-joda/timezone": "^2.5.0",
     "@mapbox/polyline": "^1.1.1",
-    "@types/uuid": "^8.3.0",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
-    "geolib": "^3.3.1",
+    "lodash": "~4.17.21",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.29.1",
-    "npm": "^6.14.8",
-    "uuid": "^3.4.0",
     "vue": "^2.6.12",
     "vue-jwt-decode": "^0.1.0",
     "vue-mapbox": "^0.4.1",
     "vue-router": "^3.4.3",
-    "vuetify": "^2.3.10",
+    "vuetify": "~2.3.10",
     "vuex": "^3.5.1",
     "vuex-typex": "^3.1.6"
   },
@@ -45,11 +40,11 @@
     "eslint-plugin-vue": "^5.2.3",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
-    "sass": "^1.26.10",
+    "sass": "~1.32.10",
     "sass-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0"
+    "vuetify-loader": "~1.6.0"
   }
 }
