--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.3.2",
     "@mapbox/polyline": "^1.1.1",
-    "@types/uuid": "^8.3.3",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.21.4",
     "lodash": "~4.17.21",
     "mapbox-gl": "^1.13.2",
@@ -24,21 +24,21 @@
     "vuex-typex": "^3.1.9"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-plugin-typescript": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-typescript": "^8.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "@vue/cli-plugin-babel": "^5.0.0",
+    "@vue/cli-plugin-eslint": "^5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.0",
+    "@vue/cli-service": "^5.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "babel-eslint": "^10.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "5.6.0",
-    "eslint": "^6.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-vue": "^7.17.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "prettier": "^2.5.0",
     "raw-loader": "^4.0.2",
     "sass": "~1.32.10",
@@ -46,6 +46,7 @@
     "typescript": "^4.5.0",
     "vue-cli-plugin-vuetify": "^2.4.5",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "~1.6.0"
+    "vuetify-loader": "^1.7.0",
+    "webpack": "^5.70.0"
   }
 }
