--- a/package.json
+++ b/package.json
@@ -12,28 +12,30 @@
     "@dsb-norge/vue-keycloak-js": "^1.3.2",
     "@mapbox/polyline": "^1.1.1",
     "@types/uuid": "^8.3.4",
-    "axios": "^0.21.4",
+    "@vue/composition-api": "^1.4.9",
+    "axios": "^0.26.0",
     "lodash": "~4.17.21",
     "mapbox-gl": "^1.13.2",
     "moment": "^2.29.1",
+    "v-mapbox": "^1.11.0",
     "vue": "^2.6.14",
-    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.6.0",
+    "vuetify": "^2.6.4",
     "vuex": "^3.6.2",
     "vuex-typex": "^3.1.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-plugin-eslint": "^5.0.0",
     "@vue/cli-plugin-typescript": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -41,10 +43,10 @@
     "eslint-webpack-plugin": "^3.1.1",
     "prettier": "^2.5.0",
     "raw-loader": "^4.0.2",
-    "sass": "~1.32.10",
-    "sass-loader": "^8.0.2",
-    "typescript": "^4.5.0",
-    "vue-cli-plugin-vuetify": "^2.4.5",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.0.0",
+    "typescript": "^4.6.2",
+    "vue-cli-plugin-vuetify": "^2.4.7",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0",
     "webpack": "^5.70.0"
