--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^8.3.4",
     "@vue/composition-api": "^1.4.9",
     "axios": "^0.26.0",
+    "ibantools": "^4.1.5",
     "lodash": "~4.17.21",
     "mapbox-gl": "^1.13.2",
     "moment": "^2.29.1",
