--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/polyline": "^1.1.1",
     "@types/uuid": "^8.3.4",
     "@vue/composition-api": "^1.4.9",
+    "awesome-phonenumber": "^2.70.0",
     "axios": "^0.26.0",
     "ibantools": "^4.1.5",
     "lodash": "~4.17.21",
